<resources>
    <string name="imageMarket">LokalMarket Image</string>
    <string name="app_name">LokalMarket</string>
    <string name="content_desc">Logo Lokal Market</string>
    <string name="text">LokalMarket</string>
    <string name="tagline">Belanja Tanpa Batas, Tanpa Lag</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="register">Belum punya akun? Daftar di sini</string>
    <string name="register_title">Buat Akun LokalMarket</string>
    <string name="name_register">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="daftar">Daftar Sekarang</string>
    <string name="logintext">Sudah punya akun? Login di sini</string>
    <string name="productimg">Gambar Produk</string>
    <string name="nameProduct">Nama Produk</string>
    <string name="price">Rp. 500.000</string>
    <string name="discount">Diskon 10%</string>
    <string name="seeMore">Lihat Selengkapnya</string>
    <string name="description">Deskripsi Produk:</string>
    <string name="descriptionContent">Ini adalah deskripsi lengkap produk lokal berkualitas tinggi yang tersedia di LokalMarket.</string>
    <string name="checkout">Checkout Sekarang</string>
    <string name="address">Alamat Pengiriman</string>
    <string name="namaPembeli">Nama Pembeli</string>
    <string name="addressDetail">Jl. RS. Fatmawati Raya, Pd. Labu, Jakarta Selatan, 12450</string>
    <string name="ringkasanPesanan">Ringkasan Pesanan</string>
    <string name="totalHarga">Total Harga:</string>
    <string name="buatPesanan">Buat Pesanan</string>
    <string name="kategoriPakaian">Pakaian</string>
    <string name="kategoriAlatRumahTangga">Alat Rumah Tangga</string>
    <string name="kategoriBahanPokok">Bahan Pokok</string>
    <string name="kategori">Kategori</string>
</resources>